# gnome-optimizer

./: .gitignore  .nojekyll  LICENSE  README.md  colab_allen_cahn_gnome_vs_soap.py  colab_kdv_gnome_vs_soap.py  colab_wave_gnome_vs_soap.py  index.html  jax_port_plan.md  pyproject.toml
blog/: blog_helpers.py  index.html  index.qmd
docs/: method.md  variance.md
experiments/: allen_cahn_jaxpi.py  allen_cahn_pinn.py  burgers_jaxpi.py  burgers_pinn.py  cifar_rotation.py  kdv_pinn.py  kuramoto_sivashinsky_pinn.py  navier_stokes_pinn.py  ols_regression.py  poisson_pinn.py  poisson_pinn_jax.py  utkface.py  wave_pinn.py  wikitext_gpt.py
experiments/baselines/: __init__.py  soap.py  soap_jax.py
experiments/common/: __init__.py  device.py  divergence.py  pinn_arch_jax.py  resnet.py  run_log.py  schedule.py
gnome/: __init__.py  blocks.py  optimizer.py
gnome_jax/: __init__.py  blocks.py  gnome.py  surrogate.py
index_files/libs/bootstrap/: bootstrap-e9ccb1a5d7e34c972e9eeea6d49cd5e0.min.css
scripts/: sweep.py
tests/: test_gnome_jax.py
